[gd_scene load_steps=7 format=3 uid="uid://cxoopxpydf5qv"]

[ext_resource type="Texture2D" uid="uid://dstps5fdwc7u4" path="res://assets/blue_button13.png" id="1_3b7ki"]
[ext_resource type="Script" path="res://Scenes/auth.gd" id="1_qakvv"]
[ext_resource type="Texture2D" uid="uid://bwd2cv23mdn7" path="res://assets/red_button.png" id="2_n8dqo"]
[ext_resource type="Texture2D" uid="uid://dk5xcopaapcok" path="res://assets/red_button_pressed.png" id="3_wrr4i"]
[ext_resource type="Texture2D" uid="uid://c7cg1qhyysqpo" path="res://assets/yellow_sliderLeft.png" id="5_rr177"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s3ifb"]
texture = ExtResource("1_3b7ki")

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qakvv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.960784, 0.960784, 1)

[node name="LoginScreen" type="ColorRect" parent="ColorRect"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -112.5
offset_right = 225.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.796078, 0.796078, 0.796078, 1)

[node name="LoginScreen" type="VBoxContainer" parent="ColorRect/LoginScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -91.5
offset_right = 225.0
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/LoginScreen/LoginScreen"]
layout_mode = 2

[node name="EmailLine" type="LineEdit" parent="ColorRect/LoginScreen/LoginScreen/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/font_placeholder_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_s3ifb")
placeholder_text = "Email"
alignment = 1
virtual_keyboard_type = 5
caret_blink = true

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/LoginScreen/LoginScreen"]
layout_mode = 2

[node name="PasswordLine" type="LineEdit" parent="ColorRect/LoginScreen/LoginScreen/MarginContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/font_placeholder_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_s3ifb")
placeholder_text = "Password"
alignment = 1
virtual_keyboard_type = 5
caret_blink = true
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/LoginScreen/LoginScreen"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SignUpButton" type="TextureButton" parent="ColorRect/LoginScreen/LoginScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_n8dqo")
texture_pressed = ExtResource("3_wrr4i")

[node name="Label" type="Label" parent="ColorRect/LoginScreen/LoginScreen/HBoxContainer/SignUpButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Sign Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginButton" type="TextureButton" parent="ColorRect/LoginScreen/LoginScreen/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_n8dqo")
texture_pressed = ExtResource("3_wrr4i")

[node name="Label" type="Label" parent="ColorRect/LoginScreen/LoginScreen/HBoxContainer/LoginButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorText" type="Label" parent="ColorRect/LoginScreen/LoginScreen"]
layout_mode = 2

[node name="SignUpScreen2" type="ColorRect" parent="ColorRect"]
visible = false
custom_minimum_size = Vector2(500, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -175.0
offset_right = 225.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.737255, 0.737255, 0.737255, 1)

[node name="SignUpScreen" type="VBoxContainer" parent="ColorRect/SignUpScreen2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -147.0
offset_right = 225.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/SignUpScreen2/SignUpScreen"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="ColorRect/SignUpScreen2/SignUpScreen/MarginContainer4"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("5_rr177")
stretch_mode = 5

[node name="Label" type="Label" parent="ColorRect/SignUpScreen2/SignUpScreen/MarginContainer4/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -11.5
offset_right = 225.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/SignUpScreen2/SignUpScreen"]
layout_mode = 2

[node name="NameLine" type="LineEdit" parent="ColorRect/SignUpScreen2/SignUpScreen/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/font_placeholder_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_s3ifb")
placeholder_text = "Name"
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/SignUpScreen2/SignUpScreen"]
layout_mode = 2

[node name="EmailLine" type="LineEdit" parent="ColorRect/SignUpScreen2/SignUpScreen/MarginContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/font_placeholder_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_s3ifb")
placeholder_text = "Email"
alignment = 1
virtual_keyboard_type = 5

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/SignUpScreen2/SignUpScreen"]
layout_mode = 2

[node name="PasswordLine" type="LineEdit" parent="ColorRect/SignUpScreen2/SignUpScreen/MarginContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/font_placeholder_color = Color(0.305882, 0.74902, 0.866667, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_s3ifb")
placeholder_text = "Password"
alignment = 1
virtual_keyboard_type = 6
secret = true

[node name="isTeacher" type="CheckButton" parent="ColorRect/SignUpScreen2/SignUpScreen"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "I am a teacher"
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/SignUpScreen2/SignUpScreen"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SignUpPageSignUpButton" type="TextureButton" parent="ColorRect/SignUpScreen2/SignUpScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_n8dqo")
texture_pressed = ExtResource("3_wrr4i")

[node name="Label" type="Label" parent="ColorRect/SignUpScreen2/SignUpScreen/HBoxContainer/SignUpPageSignUpButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Sign Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorText" type="Label" parent="ColorRect/SignUpScreen2/SignUpScreen"]
layout_mode = 2

[connection signal="pressed" from="ColorRect/LoginScreen/LoginScreen/HBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="ColorRect/LoginScreen/LoginScreen/HBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="ColorRect/SignUpScreen2/SignUpScreen/MarginContainer4/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ColorRect/SignUpScreen2/SignUpScreen/HBoxContainer/SignUpPageSignUpButton" to="." method="_on_sign_up_page_sign_up_button_pressed"]
